@@ -91,10 +91,12 @@ E void chan_delete(Channel * c);
 E void del_ban(Channel * chan, char *mask);
 E void set_key(Channel * chan, char *value);
 E void set_limit(Channel * chan, char *value);
+E void set_rejoinlock(Channel * chan, char *value);
 E void del_invite(Channel * chan, char *mask);
 E void del_quiet(Channel * chan, char *mask);
 E char *get_key(Channel * chan);
 E char *get_limit(Channel * chan);
+E char *get_rejoinlock(Channel * chan);
 E Channel *chan_create(char *chan);
 E Channel *join_user_update(User * user, Channel * chan, char *name);
 E void add_exception(Channel * chan, char *mask);
