@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="112"
+VERSION_BUILD="113"
 
 # $Log$
+#
+# BUILD : 1.4.0.113 (SVN)
+# BUGS  : N/A
+# NOTES : Added rejoin lock time support for inspircd. Fixed user/chan modes in inspircd11 protocol file.
 #
 # BUILD : 1.4.0.112 (SVN)
 # BUGS  : N/A
