@@ -1,6 +1,7 @@
 Denora Version 1.4.0
 --------------------
 Provided by Denora Team <dev@denorastats.org> - 2007
+11/18 A Added rejoin lock time support for inspircd               [ #00]
 11/18 A Added Invite Exception support to inspircd module         [ #00]
 08/17 A Admins passwords are now hidden in debug messages         [#414]
 08/16 A Added recompile option to Makefile, make recompile        [ #00]
@@ -32,6 +33,7 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+11/18 F Fixed user/chan modes in inspircd11 protocol file         [ #00]
 11/18 F Fixed denora not reporting version correctly to inspircd  [ #00]
 11/18 F Fixed inspircd not catching ircd versions                 [ #00]
 11/18 F Fixed wrong characters for aq prefixes for inspircd       [ #00]
